# subdex

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  subdex.toml.example
.github/workflows/: ci.yml  release.yml
crates/subdex/: Cargo.toml
crates/subdex-codegen/: Cargo.toml
crates/subdex-codegen/src/: lib.rs  main.rs  model.rs  parse.rs
crates/subdex-config/: Cargo.toml
crates/subdex-config/src/: lib.rs
crates/subdex-core/: Cargo.toml
crates/subdex-core/src/: error.rs  handler.rs  lib.rs  observer.rs  source.rs  store.rs  types.rs
crates/subdex-graphql/: Cargo.toml
crates/subdex-graphql/src/: config.rs  lib.rs  server.rs  status.rs
crates/subdex-graphql/tests/: serve.rs
crates/subdex-source/: Cargo.toml
crates/subdex-source/src/: config.rs  hybrid.rs  lib.rs  mapping.rs  retry.rs  source.rs  ss58.rs
crates/subdex-source/src/sqd/: client.rs  mapping.rs  mod.rs
crates/subdex-source/tests/: live_chain.rs  live_sqd.rs  live_unit.rs  selection.rs
crates/subdex-store/: Cargo.toml
crates/subdex-store/migrations/: 0001_bookkeeping.sql
crates/subdex-store/src/: config.rs  lib.rs  schema.rs  store.rs
crates/subdex-store/tests/: pg_store.rs
crates/subdex-store/tests/fixtures/handler_migrations/: 0001_create_widgets.sql  0002_add_widget_colour.sql
crates/subdex/src/: config.rs  lib.rs  metrics.rs  processor.rs  testkit.rs
crates/subdex/tests/: e2e.rs
docs/: DESIGN-DECISIONS.md  README.md  architecture.md  code-walkthrough.md  data-flow.md
docs/rfcs/: 024-sqd-portal-source.md  027-concurrent-handler-compute.md  034-schema-first-codegen.md
examples/multi-pallet/: Cargo.toml  README.md
examples/multi-pallet/migrations/assets/: 0001_asset_lifecycle.sql  0002_index_asset_id.sql
examples/multi-pallet/src/: assets.rs  balances.rs  graphql.rs  lib.rs  main.rs  value_ext.rs
examples/transfers/: .env.example  Cargo.toml  README.md
examples/transfers/src/: graphql.rs  handler.rs  lib.rs  main.rs  value_ext.rs
