[workspace]
resolver = "2"
members = [
    "crates/subdex-core",
    "crates/subdex-source",
    "crates/subdex-store",
    "crates/subdex",
    "examples/*",
    # Added in subsequent feature branches as each is implemented:
    "crates/subdex-graphql",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/kunal171/subdex"
description = "A general-purpose, code-first indexer framework for Substrate chains, written in Rust."

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# substrate client + scale
subxt = "0.50"
subxt-core = "0.50"
parity-scale-codec = { version = "3", features = ["derive"] }
scale-value = "0.18"
scale-decode = "0.16"

# storage
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "json", "bigdecimal"] }

# graphql / http
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"

# serde / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# errors / logging
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# internal
subdex = { path = "crates/subdex" }
subdex-core = { path = "crates/subdex-core" }
subdex-source = { path = "crates/subdex-source" }
subdex-store = { path = "crates/subdex-store" }
subdex-graphql = { path = "crates/subdex-graphql" }

[profile.release]
opt-level = 3
lto = "thin"
