[package]
name = "subdex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for the subdex Substrate indexer framework."

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
parity-scale-codec.workspace = true
scale-value.workspace = true
hex.workspace = true
