[package]
name = "subdex-source"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "subxt-based direct-RPC DataSource for the subdex framework."

[dependencies]
subdex-core.workspace = true
subxt.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
scale-value.workspace = true
tracing.workspace = true
hex.workspace = true
base58.workspace = true
blake2.workspace = true

# Optional: SQD-portal DataSource (HTTP + JSON). Off by default; enable with
# `--features sqd`. reqwest's `gzip` transparently decompresses the portal's
# (optionally gzipped) JSON-lines response.
reqwest = { workspace = true, optional = true, features = ["gzip"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
# Ships SqdPortalSource: a fast historical-backfill DataSource over the SQD
# (Subsquid) portal (see src/sqd/).
sqd = ["dep:reqwest", "dep:serde", "dep:serde_json"]

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
